src/styles/App.css
@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');

img {
  	-webkit-user-drag: none;
  	-khtml-user-drag: none;
	-moz-user-drag: none;
	-o-user-drag: none;
	user-drag: none;
}

input {
	font-family: 'Roboto', sans-serif, !important;
	font-style: normal;
	font-weight: normal;
	font-size: 14px;
	line-height: 16px;
	letter-spacing: 0.05em;
    
	border: 1px solid #DDDEE8;
	box-sizing: border-box;
	border-radius: 6px;
	padding: 10px;

	width: 100%;
}

input:blur {
	transition-property: border;
	transition-duration: 0.5s; /* This will happen after the hover state and can also be used for consistency on the overall experience */
	border: 1px solid #DDDEE8;
}

button {
	cursor: pointer;
	text-transform: uppercase;
	color: #DDDEE8;
	border-radius: 6px;
	font-family: 'Roboto', sans-serif, !important;
	font-style: normal;
	font-weight: 900;
	font-size: 14px;
	line-height: 16px;
	text-align: center;
	letter-spacing: 0.05em;
	outline: none;
	box-shadow: none;
}

*:focus {
    outline: none;
}

